k8s/service.yaml
#
# SPDX-License-Identifier: Apache-2.0
#
---
apiVersion: v1
kind: Service
metadata:
  name: vscode
spec:
  selector:
    app: vscode
  ports:
    - port: 8080
      targetPort: 8080
