k8s/ingress.yaml
#
# SPDX-License-Identifier: Apache-2.0
#
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vscode
  annotations:
    ingress.bluemix.net/redirect-to-https: "True"
spec:
  tls:
    - hosts:
        - vscode.example.org
      secretName: vscode-tls-secret
  rules:
    - host: vscode.example.org
      http:
        paths:
          - path: /
            backend:
              serviceName: vscode
              servicePort: 8080
